dataset1235/2025-2/2947369575/users/2975895382/executions/3873599344_2416501300.log
== RUN (2025-08-20 22:37:52)
-- CODE: 
print(5*'*')
print(3*'*')
print(1*'*')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:38:39)
-- CODE: 
print("*****")
print(" *** ")
print("  *  ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
  *
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
  *
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:38:30)
-- CODE: 
print("*****")
print(" *** ")
print("  *  ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
  *
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
---- user output:
  *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:38:22)
-- CODE: 
print("*****")
print(" *** )
print("  *  ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 2
    print(" *** )
          ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
 *** 
  *
-- ERROR:
File "XXXX", line 2
    print(" *** )
          ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
